--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		</div>
 		
 
-		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+		<script src="https://code.jquery.com/jquery-latest.min.js"></script>
 		<script src="assets/javascript/game.js">
 		</script>
 	</body>
